--- a/Nepal_website/site.css
+++ b/Nepal_website/site.css
@@ -9,12 +9,22 @@ body {
 header h1 {
     text-align: center;
     padding-top: 20px;
-    font-size: 48px;
-    font-family: monospace;
+    font-size: 50px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.introduction{
+h1 {
+    font-family: 'Cambria, Cochin, Georgia, Times, ' Times New Roman', serif';
+}
+
+.introduction {
+    margin: 0 auto;
+    text-align: left;
+    width: 800px;
     text-align: center;
+    font-size: 25px;
+    font-style: italic;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .mountain {
@@ -25,21 +35,19 @@ header h1 {
 }
 
 .mountain h1 {
-    color: rgb(58, 1, 181);
-    text-align: center;
-    font-style: italic;
+    color: rgb(6, 50, 209);
     padding-top: 250px;
     padding-bottom: 250px;
     font-size: 48px;
-    font-family: cursive;
-    opacity: 0.6;
+    opacity: 0.7;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-style: italic;
 }
 
 .region_images {
     width: 570px;
     display: inline-block;
     padding-left: 30px;
-
 }
 
 .region_images img {
@@ -56,8 +64,10 @@ header h1 {
     width: 50%;
     vertical-align: top;
     font-size: 24px;
+    padding-top: 80px;
     padding-left: 25px;
     text-align: justify;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .regions_container {
@@ -71,7 +81,8 @@ section h1 {
 
 .heritage_container {
     text-align: center;
-    margin-bottom: 20px;
+    margin-top: 35px;
+    margin-bottom: 30px;
 }
 
 .heritage_container a {
@@ -80,7 +91,7 @@ section h1 {
 
 .heritage_images {
     display: inline-block;
-    margin: 30px;
+    margin: 25px;
     box-shadow: 8px 8px rgb(135, 122, 122);
 }
 
@@ -89,8 +100,9 @@ section h1 {
 }
 
 figcaption {
-    font-size: 24px;
+    font-size: 25px;
     color: black;
+    font-style: oblique;
 }
 
 footer img {
